tests/transpiler/x/rs/query_sum_select.rs
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:06 +0700
fn main() {
    let nums: Vec<i64> = vec![1, 2, 3];
    let result: Vec<i64> = { let mut _q: Vec<i64> = Vec::new(); for n in nums { if (n > 1) { _q.push(n.iter().sum::<i64>()); } } _q };
    println!("{:?}", result);
}
